--- a/templates/content.html
+++ b/templates/content.html
@@ -5,6 +5,7 @@
 <div class ="content">
     <h2>Oh what a lovely content page you have</h2>
     <p>This is the second page</p>
+    <p>Just adding more stuff you know...</p>
 </div>
 
 {%endblock%}
