Fully workable graph still with errors

--- a/templates/plot.html
+++ b/templates/plot.html
@@ -8,6 +8,32 @@
     <p>This is the second page</p>
     <p>Just adding more stuff you know...</p>
 </div>
+
+<div class ="form-group">
+    <form action="{{ url_for('plot')}}" method="post">
+    <label for="stock_symbol">Stock Symbol:</label><br>
+    <input type="text" name="stock_symbol"
+    name="stock_symbol"><br>
+
+    <br>
+
+    <form action="{{ url_for('plot')}}" method="post">
+    <label for="startyr">Start date:</label>
+    <input type="date" id="Graph_start" name="Graph_start"
+
+           min="2010-01-01" max="2020-05-16">
+
+    <form action="{{ url_for('plot')}}" method="post">
+    <label for="endyr">End date:</label>
+    <input type="date" id="Graph_end" name="Graph_end"
+
+           min="2010-01-01" max="2020-05-16">
+           <input type="submit">
+    </form>
+
+</form>
+
+</div>
 {{theplot | safe}}
 {{div1 | safe}}
 {%endblock%}
