--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
           <ul class="menu">
             <link><a href="{{url_for('home') }}">Home</a></link>
             <link><a href="{{url_for('first_page') }}">Stuff</a></link>
+            <link><a href="{{url_for('plot') }}">Plot</a></link>
           </ul>
         </nav></strong>
       </div>
