Added Hollys etsy app

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
             <link><a href="{{url_for('home') }}">Home</a></link>
             <link><a href="{{url_for('first_page') }}">Stuff</a></link>
             <link><a href="{{url_for('plot') }}">Plot</a></link>
+            <link><a href="{{url_for('etsy_data') }}">Etsy Data</a> <link />
           </ul>
         </nav></strong>
       </div>
