--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 
 <div class ="home">
-    <h2>Ryans Website!</h2>
-    <p>Home Page baby</p>
+    <h2>Simple site to host two web apps</h2>
+
 </div>
 {%endblock%}
