--- a/templates/plot.html
+++ b/templates/plot.html
@@ -4,9 +4,8 @@
   <script type="text/javascript" src={{cdn_js | safe }}></script>
 
 <div class ="plot">
-    <h2>Oh what a lovely content page you have</h2>
-    <p>This is the second page</p>
-    <p>Just adding more stuff you know...</p>
+    <h2>WebBased Dynamic Stock Symbol Graph</h2>
+    <p1> Please try stock symbols such as Google, Tesla or Apple (GOOG, TSLA, AAPL) </p1>
 </div>
 
 <div class ="form-group">
@@ -21,13 +20,13 @@
     <label for="startyr">Start date:</label>
     <input type="date" id="Graph_start" name="Graph_start"
 
-           min="2010-01-01" max="2020-05-16" required>
+           min="2010-01-01" max="2020-06-22" required>
 
     <form action="{{ url_for('plot')}}" method="post">
     <label for="endyr">End date:</label>
     <input type="date" id="Graph_end" name="Graph_end"
 
-           min="2010-01-01" max="2020-05-16">
+           min="2010-01-01" max="2020-06-22">
            <input type="submit" required>
     </form>
 
